--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -36,6 +36,6 @@
   </div>
   <div class="ion-text-center ion-margin-top">
     <div>{{"app.finded"|translate}}: <span style="font-size: 2em;color: brown;">{{recognizedChar}}</span></div>
-    <!-- <div>If not correct might be: {{suggestions}}</div> -->
+    <div>{{"app.suggestion"|translate}}: {{suggestions}}</div>
   </div>
 </ion-content>
