--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      {{"app.title"|translate}}
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,12 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="medium">{{"app.title"|translate}}</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
-</ion-content>
+  <div class="shell-container">
+    <span class="shell" *ngFor="let letter of letterList">
+      {{letter}}
+    </span>
+  </div>
+</ion-content>  
